--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Message</h1>
+<div class="col-md-6 col-md-offset-3">
 
-<%= render 'form', message: @message %>
 
-<%= link_to 'Back', messages_path %>
+  <h1 class="text-center">New Message</h1>
+
+  <%= render 'form', message: @message %>
+
+  <%= link_to 'Back', messages_path, class: "btn btn-success" %>
+
+
+</div>
