--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', message: @message %>
 
-<%= link_to 'Show', @message %> |
-<%= link_to 'Back', messages_path %>
+<%= link_to 'Show', @message, class: "btn btn-success" %> |
+<%= link_to 'Back', messages_path, class: "btn btn-info" %>
