--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -16,9 +16,9 @@
       <tr>
         <td><%= message.title %></td>
         <td><%= message.description %></td>
-        <td><%= link_to 'Show', message %></td>
-        <td><%= link_to 'Edit', edit_message_path(message) %></td>
-        <td><%= link_to 'Destroy', message, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', message, class: "btn btn-info" %></td>
+        <td><%= link_to 'Edit', edit_message_path(message), class: "btn btn-success "%></td>
+        <td><%= link_to 'Destroy', message, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
