Add Edit and Delete function for Comment

--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -9,14 +9,20 @@
   <p><%= time_ago_in_words(@message.created_at) %> ago</p>
 
   <p>
-    <strong>Description:</strong> 
+    <strong>Description:</strong>
     <%= @message.description %>
   </p>
   <h3>Comments:</h3>
-  <p><%= render @message.comments %></p>
+  <div class="panel panel-success">
+    <div class="panel-bod">
+      <p><%= render @message.comments %></p>
+    </div>
+
+  </div>
+
   <h3>Join Discussion:</h3>
   <%= render 'comments/form' %>
 
-  <%= link_to 'Edit', edit_message_path(@message) %> |
-  <%= link_to 'Back', messages_path %>
+  <%= link_to 'Edit', edit_message_path(@message), class: "btn btn-success" %> |
+  <%= link_to 'Back', messages_path, class: "btn btn-info" %>
 </div>
