--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -3,9 +3,11 @@
   <p>By: <%= comment.user.email %> <%= time_ago_in_words(comment.created_at) %> ago</p>
 
   <div>
-    <% if comment.user_id == current_user.id  %>
-      <%= link_to "Edit", edit_message_comment_path(comment.message, comment), class: "btn btn-success" %>
-      <%= link_to "Delete", message_comment_path(comment.message, comment), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
+    <% if user_signed_in? %>
+      <% if comment.user_id == current_user.id  %>
+        <%= link_to "Edit", edit_message_comment_path(comment.message, comment), class: "btn btn-success" %>
+        <%= link_to "Delete", message_comment_path(comment.message, comment), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
+      <% end %>
     <% end %>
   </div>
 </div>
