--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -14,11 +14,18 @@
   <tbody>
     <% @messages.each do |message| %>
       <tr>
+
         <td><%= message.title %></td>
         <td><%= message.description %></td>
-        <td><%= link_to 'Show', message, class: "btn btn-info" %></td>
-        <td><%= link_to 'Edit', edit_message_path(message), class: "btn btn-success "%></td>
-        <td><%= link_to 'Destroy', message, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
+        <% if user_signed_in? %>
+          <td><%= link_to 'Show', message, class: "btn btn-info" %></td>
+          <% if message.user_id == current_user.id %>
+            <td><%= link_to 'Edit', edit_message_path(message), class: "btn btn-success "%></td>
+            <td><%= link_to 'Destroy', message, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
+          <% end %>
+
+        <% end %>
+
       </tr>
     <% end %>
   </tbody>
